tests/ui/transmutability/type-alias-normalization.stderr
error[E0277]: `JustUnit` cannot be safely transmuted into `JustUnit`
  --> $DIR/type-alias-normalization.rs:27:37
   |
LL |     assert::is_maybe_transmutable::<JustUnit, ()>();
   |                                     ^^^^^^^^ analyzing the transmutability of `JustUnit` is not yet supported
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/type-alias-normalization.rs:10:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Src: TransmuteFrom<
   |  ______________^
LL | |             Src,
LL | |             {
LL | |                 Assume {
...  |
LL | |             },
LL | |         >,
   | |_________^ required by this bound in `is_maybe_transmutable`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn test() where (): TransmuteFrom<(), Assume { alignment: true, lifetimes: true, safety: true, validity: true }> {
   |           ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
